gefixt met het opslaan van privacy

--- a/Webapp/Webapp/Views/Profile/Edit.cshtml
+++ b/Webapp/Webapp/Views/Profile/Edit.cshtml
@@ -11,20 +11,21 @@
 {
     <link rel="stylesheet" href="~/css/User.css" />
     <div class="container bootstrap snippet">
-        <div class="row">
-            <div class="col-sm-10"><h1>Patiënt</h1><hr /></div>
-        </div>
-        <div class="row">
-            <div class="col-sm-9">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#home">Algemeen</a></li>
-                    <li><a data-toggle="tab" href="#messages">Privacy</a></li>
-                </ul>
+        <form class="form" method="post" id="registrationForm">
+            <div class="row">
+                <div class="col-sm-10"><h1>Patiënt</h1><hr /></div>
+            </div>
+            <div class="row">
+                <div class="col-sm-9">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a data-toggle="tab" href="#home">Algemeen</a></li>
+                        <li><a data-toggle="tab" href="#messages">Privacy</a></li>
+                    </ul>
 
-                <div class="tab-content">
-                    <div class="tab-pane active" id="home">
-                        <hr>
-                        <form class="form" method="post" id="registrationForm">
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="home">
+                            <hr>
+
 
                             <div class="form-group">
                                 <div class="col-xs-6">
@@ -133,18 +134,15 @@
                                 <button class="btn btn-lg btn-success" type="submit" asp-controller="profile" asp-action="Edit"><i class="glyphicon glyphicon-ok-sign"></i> Opslaan</button>
                                 <button class="btn btn-lg" input type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset gegevens</button>
                             </div>
-                        </form>
 
-                        <hr>
+                            <hr>
 
-                    </div><!--/tab-pane-->
-                    <div class="tab-pane" id="messages">
+                        </div><!--/tab-pane-->
+                        <div class="tab-pane" id="messages">
 
-                        <h2></h2>
+                            <h2></h2>
 
-                        <hr>
-                        <form class="form" method="post" id="registrationForm">
-
+                            <hr>
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
@@ -219,32 +217,36 @@
                                 <br>
                                 <button class="btn btn-lg btn-success" type="submit" asp-controller="profile" asp-action="Edit"><i class="glyphicon glyphicon-ok-sign"></i> Opslaan</button>
                             </div>
-                        </form>
 
+                        </div><!--/tab-pane-->
                     </div><!--/tab-pane-->
-                </div><!--/tab-pane-->
-            </div><!--/tab-content-->
-        </div><!--/col-9-->
+
+                </div><!--/tab-content-->
+
+            </div><!--/col-9-->
+        </form>
     </div><!--/row-->
+    
 }
 else if (Model.Doctor != null)
 {
     <link rel="stylesheet" href="~/css/User.css" />
     <div class="container bootstrap snippet">
-        <div class="row">
-            <div class="col-sm-10"><h1>Doctor</h1><hr /></div>
-        </div>
-        <div class="row">
-            <div class="col-sm-9">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#home">Algemeen</a></li>
-                    <li><a data-toggle="tab" href="#privacy">Privacy</a></li>
-                </ul>
+        <form class="form" method="post" id="registrationForm">
+            <div class="row">
+                <div class="col-sm-10"><h1>Doctor</h1><hr /></div>
+            </div>
+            <div class="row">
+                <div class="col-sm-9">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a data-toggle="tab" href="#home">Algemeen</a></li>
+                        <li><a data-toggle="tab" href="#privacy">Privacy</a></li>
+                    </ul>
 
-                <div class="tab-content">
-                    <div class="tab-pane active" id="home">
-                        <hr>
-                        <form class="form" method="post" id="registrationForm">
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="home">
+                            <hr>
+
 
                             <div class="form-group">
                                 <div class="col-xs-6">
@@ -327,18 +329,17 @@ else if (Model.Doctor != null)
                                     <button class="btn btn-lg" input type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset gegevens</button>
                                 </div>
                             </div>
-                        </form>
 
-                        <hr>
-                    </div><!--/tab-pane-->
-                    <!-- Hier komt de code voor de tab privacy-->
-                    <div class="tab-pane" id="privacy">
-                        <form class="form" method="post" id="registrationForm">
+
+                            <hr>
+                        </div><!--/tab-pane-->
+                        <!-- Hier komt de code voor de tab privacy-->
+                        <div class="tab-pane" id="privacy">
 
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" checked="@Model.Doctor.PrivMail">
+                                        <input type="checkbox" asp-for="Doctor.PrivMail" checked="@Model.Doctor.PrivMail">
                                         <span class="slider"></span>
                                     </label>
                                     Email
@@ -348,18 +349,18 @@ else if (Model.Doctor != null)
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" checked="@Model.Doctor.PrivPhonenumber">
+                                        <input type="checkbox" asp-for="Doctor.PrivPhonenumber" checked="@Model.Doctor.PrivPhonenumber">
                                         <span class="slider"></span>
                                     </label>
                                     Telefoonnummer
                                 </div>
                             </div>
-
-                        </form>
+                        </div><!--/tab-pane-->
                     </div><!--/tab-pane-->
-                    <!--     Hier komt de code voor de tab privacy-->
-                </div><!--/tab-pane-->
-            </div><!--/tab-content-->
-        </div><!--/col-9-->
+                </div><!--/tab-content-->
+            </div><!--/col-9-->
+        </form>
     </div><!--/row-->
+
+
 }
