--- a/Webapp/Webapp/Views/Profile/Inzie.cshtml
+++ b/Webapp/Webapp/Views/Profile/Inzie.cshtml
@@ -121,7 +121,7 @@
                             }
                             <div class="col-xs-12">
                                 <br>
-                                <a asp-controller="Patient" asp-action="Index" class="btn btn-primary"><i class="fa fa-chevron-left"></i> Terug</a>
+                                <a asp-controller="treatment" asp-action="index" class="btn btn-primary"><i class="fa fa-chevron-left"></i> Terug</a>
                             </div>
                         </form>
                         <hr>
@@ -181,7 +181,7 @@ else if (Model.Doctor != null)
 
                             <div class="form-group">
                                 <div class="col-xs-3">
-                                    <button type="submit" class="btn btn-primary btn-block" asp-action="Index" asp-controller="Patient">Terug</button>
+                                    <button type="submit" class="btn btn-primary btn-block" asp-action="index" asp-controller="patient">Terug</button>
                                 </div>
                             </div>
                         </form>
