--- a/Webapp/Webapp/Views/Doctor/Index.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Webapp.Models.Data.Doctor>
+﻿@model Webapp.Models.DoctorViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -15,20 +15,19 @@
         <tr>
             <th>Naam</th>
             <th>Geslacht</th>
-            <th>Functie</th>
+            <th>Acties</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (DoctorDetailViewModel item in Model.Doctors)
         {
             <tr>
-                <td>@item.Name</td>
-                <td>@item.Gender</td>
-                <td>@item.Function</td>
+                <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                <td>@Html.DisplayFor(modelItem => item.Gender)</td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.EmployeeNumber }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.EmployeeNumber }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.EmployeeNumber })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 </td>
             </tr>
         }
