--- a/Webapp/Webapp/Views/Treatment/Edit.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Edit.cshtml
@@ -20,7 +20,7 @@
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="name"><h4>Patiënt</h4></label>
-                                <input type="text" class="form-control" asp-for="Patients[0].Name" value="@Model.Patients[0].Name" title="//Naam van de patiënt//">
+                                <input type="text" class="form-control" asp-for="PatientName" value="@Model.PatientName" title="//Naam van de patiënt//">
                             </div>
                         </div>
                         <div class="form-group">
@@ -35,7 +35,14 @@
                                 <select asp-for="TypeId" type="text" class="form-control" placeholder="Type van de behandeling" title="Type van de behandeling.">
                                     @foreach (var Type in Model.TreatmentTypes)
                                     {
-                                        <option value="@Type.Id">@Type.Name</option>
+                                        if (@Model.TypeId == Type.Id)
+                                        {
+                                            <option selected value="@Type.Id">@Type.Name</option>
+                                        } 
+                                        else
+                                        {
+                                            <option value="@Type.Id">@Type.Name</option>
+                                        }
                                     }
                                 </select>
                             </div>
