Edited doctor cshtml files Id ==> Employeenumber

--- a/Webapp/Webapp/Views/Doctor/Create.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Create.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <input asp-for="Id" type="hidden" />
+            <input asp-for="EmployeeNumber" type="hidden" />
             <div class="form-group">
                 <label asp-for="EmployeeNumber" class="control-label"></label>
                 <input asp-for="EmployeeNumber" class="form-control" />
