--- a/Webapp/Webapp/Views/Doctor/Details.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.EmployeeNumber)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Id)
+            @Html.DisplayFor(model => model.EmployeeNumber)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.EmployeeNumber)
