--- a/Webapp/Webapp/Views/Doctor/Edit.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Edit.cshtml
@@ -14,9 +14,9 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+                <label asp-for="EmployeeNumber" class="control-label"></label>
+                <input asp-for="EmployeeNumber" class="form-control" />
+                <span asp-validation-for="EmployeeNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EmployeeNumber" class="control-label"></label>
