--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 
                         <ul id="menu-content" class="menu-content collapse out">
                             <li>
-                                <a href="#">
+                                <a asp-controller="Home" asp-action="Dashboard">
                                     <i class="fa fa-dashboard fa-lg"></i> Dashboard
                                 </a>
                             </li>
