--- a/Webapp/Webapp/Views/Doctor/Edit.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Edit.cshtml
@@ -29,9 +29,9 @@
                 <span asp-validation-for="Birth" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                <label asp-for="Phone" class="control-label"></label>
+                <input asp-for="Phone" class="form-control" />
+                <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
