--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -77,7 +77,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label for="phonenumber" class="h4">Telefoonnummer</label>
-                                    <p>@Model.Patient.PhoneNumber</p>
+                                    <p>@Model.Patient.Phone</p>
                                 </div>
                             </div>
 
@@ -104,7 +104,7 @@
 
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="ContactPersonPhoneNumber" class="h4">Contactpersoon telefoonnummer</label>
+                                    <label for="ContactPersonPhone" class="h4">Contactpersoon telefoonnummer</label>
                                     <p>@Model.Patient.ContactPersonPhone</p>
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" checked="@Model.Patient.PrivPhoneNumber" disabled>
+                                        <input type="checkbox" checked="@Model.Patient.PrivPhone" disabled>
                                         <span class="slider"></span>
                                     </label>
                                     Telefoonnummer
@@ -272,7 +272,7 @@ else if (Model.Doctor != null)
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label for="phonenumber" class="h4">Telefoonnummer</label>
-                                    <p>@Model.Doctor.PhoneNumber</p>
+                                    <p>@Model.Doctor.Phone</p>
                                 </div>
                             </div>
 
