--- a/Webapp/Webapp/Views/Doctor/Edit.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Edit.cshtml
@@ -12,17 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="EmployeeNumber" class="control-label"></label>
-                <input asp-for="EmployeeNumber" class="form-control" />
-                <span asp-validation-for="EmployeeNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmployeeNumber" class="control-label"></label>
-                <input asp-for="EmployeeNumber" class="form-control" />
-                <span asp-validation-for="EmployeeNumber" class="text-danger"></span>
-            </div>
+            <input asp-for="EmployeeNumber" type="hidden" />
             <div class="form-group">
                 <label asp-for="Birth" class="control-label"></label>
                 <input asp-for="Birth" class="form-control" />
