Added more dashboards and fixed doctor authorization department

--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
                                 <li>
                                     <a asp-action="index" asp-controller="patient">
                                         <i class="fa fa-bed fa-lg">
-                                        </i> Patienten
+                                        </i> Patiënten
                                     </a>
                                 </li>
                                 <li>
