--- a/Webapp/Webapp/Views/Department/Details.cshtml
+++ b/Webapp/Webapp/Views/Department/Details.cshtml
@@ -40,6 +40,9 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @if (User.IsInRole("admin"))
+    {
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }); @: | 
+    }
     <a asp-action="Index">Back to List</a>
 </div>
