--- a/Webapp/Webapp/Views/Department/Index.cshtml
+++ b/Webapp/Webapp/Views/Department/Index.cshtml
@@ -7,9 +7,12 @@
 
 <h2>Index</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.IsInRole("admin"))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 <table class="table table-striped table-hover" id="departmentTable" style="width:100%;">
     <thead>
         <tr>
@@ -24,9 +27,15 @@
             <td>@Html.DisplayFor(modelItem => vm.Name)</td>
             <td>@Html.DisplayFor(modelItem => vm.Description)</td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = vm.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = vm.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = vm.Id })
+                @if (User.IsInRole("admin"))
+                {
+                    @Html.ActionLink("Edit", "Edit", new { id = vm.Id }); @: | 
+                }
+                @Html.ActionLink("Details", "Details", new { id = vm.Id })
+                @if (User.IsInRole("admin"))
+                {
+                    @: | @Html.ActionLink("Delete", "Delete", new { id = vm.Id }) 
+                }
             </td>
         </tr>
 }
