Treatment/Add => Treatment/Create

--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
                                         </a>
                                     </li>
                                     <li >
-                                        <a asp-action="add" asp-controller="treatment">
+                                        <a asp-action="create" asp-controller="treatment">
                                             <i class="fa fa-medkit fa-lg">
                                             </i> Nieuwe toevoegen
                                         </a>
