--- a/Webapp/Webapp/Views/Treatment/Create.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Create.cshtml
@@ -85,3 +85,6 @@
         </div><!--/tab-content-->
     </div><!--/col-9-->
 </div><!--/row-->
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
