--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -8,7 +8,7 @@
 @if (User.IsInRole("doctor"))
 {
     <p>
-        <a asp-action="Add">Create New</a>
+        <a asp-action="create">Create New</a>
     </p>
 }
 <table class="table table-striped table-hover" id="treatmentTable" style="width:100%;">
