Changed gender and birthdate doctor and patient

--- a/Webapp/Webapp/Views/Doctor/Details.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Details.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.Phone)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Gender)
+            @Html.DisplayNameFor(model => model.GenderId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Gender)
+            @Html.DisplayFor(model => model.Genders[Model.GenderId])
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.UserName)
