--- a/Webapp/Webapp/Views/Doctor/Index.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Index.cshtml
@@ -23,7 +23,7 @@
         {
             <tr>
                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                <td>@Html.DisplayFor(modelItem => item.Gender)</td>
+                <td>@Html.DisplayFor(modelItem => item.Genders[item.GenderId])</td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.EmployeeNumber }) |
                     @Html.ActionLink("Details", "Details", new { id = item.EmployeeNumber }) |
