--- a/Webapp/Webapp/Views/Patient/Treatment.cshtml
+++ b/Webapp/Webapp/Views/Patient/Treatment.cshtml
@@ -29,7 +29,7 @@
                         <div class="form-group">
                             <div class="col-xs-6">
                                 <label for="Gender"><h4>Geslacht</h4></label>
-                                <input type="text" class="form-control" name="gender" id="gender" placeholder="Geslacht" title="Geslacht." value="@Model.Gender">
+                                <input type="text" class="form-control" name="gender" id="gender" placeholder="Geslacht" title="Geslacht." value="@Model.GenderId">
                             </div>
                         </div>
                         <div class="form-group">
