--- a/Webapp/Webapp/Views/Doctor/Create.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Create.cshtml
@@ -26,6 +26,11 @@
             <div class="form-group">
                 <label asp-for="GenderId" class="control-label"></label>
                 <input asp-for="GenderId" class="form-control" />
+                    @for (int i = 0; i < Model.Genders.Count(); i++)
+                    {
+                        <option value="i">Model.Genders[i]</option>
+                    }
+                </select>
                 <span asp-validation-for="GenderId" class="text-danger"></span>
             </div>
             <div class="form-group">
