--- a/Webapp/Webapp/Views/Doctor/Edit.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Edit.cshtml
@@ -30,6 +30,18 @@
             <div class="form-group">
                 <label asp-for="GenderId" class="control-label"></label>
                 <input asp-for="GenderId" class="form-control" />
+                    @for (int i = 0; i < Model.Genders.Count(); i++)
+                    {
+                        if (i == Model.GenderId)
+                        {
+                            <option selected value="i">Model.Genders[i]</option>
+                        }
+                        else
+                        {
+                            <option value="i">Model.Genders[i]</option>
+                        }
+                    }
+                </select>
                 <span asp-validation-for="GenderId" class="text-danger"></span>
             </div>
             <div class="form-group">
