Comment almost added

--- a/Webapp/Webapp/Views/Treatment/Create.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Create.cshtml
@@ -78,7 +78,7 @@
                             <br />
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary" asp-controller="Treatment" asp-action="Add">Maak Aan</button>
+                    <button type="submit" class="btn btn-primary" asp-controller="Treatment" asp-action="Create">Maak Aan</button>
                 </form>
                 <hr>
             </div><!--/tab-pane-->
