--- a/Webapp/Webapp/Views/Doctor/Index.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Index.cshtml
@@ -10,39 +10,42 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table table-striped table-hover" id="doctorTable" style="width:100%;">
-    <thead>
-        <tr>
-            <th>Naam</th>
-            <th>Geslacht</th>
-            <th>Acties</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (DoctorDetailViewModel item in Model.Doctors)
-        {
+<div class="hidden" id="asdfgh">
+    <table class="table table-striped table-hover" id="doctorTable" style="width:100%;">
+        <thead>
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                <td>@Html.DisplayFor(modelItem => item.Genders[item.GenderId])</td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.EmployeeNumber }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.EmployeeNumber }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.EmployeeNumber })
-                </td>
+                <th>Naam</th>
+                <th>Geslacht</th>
+                <th>Acties</th>
             </tr>
-        }
-    </tbody>
-</table>
-@section Scripts {
-    <script>
-        $("document").ready(function () {
-            initDataTable();
-        });
-
-        function initDataTable() {
-            $("#doctorTable").DataTable({
-
+        </thead>
+        <tbody>
+            @foreach (DoctorDetailViewModel item in Model.Doctors)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Genders[item.GenderId])</td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.EmployeeNumber }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.EmployeeNumber }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.EmployeeNumber })
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+    @section Scripts {
+        <script>
+            $("document").ready(function () {
+                initDataTable();
+                $("#asdfgh").removeClass("hidden");
             });
-        }
-    </script>
-}
+
+            function initDataTable() {
+                $("#doctorTable").DataTable({
+
+                });
+            }
+        </script>
+    }
