Aanpassing treatment detail

--- a/Webapp/Webapp/Views/Treatment/Index.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Index.cshtml
@@ -34,7 +34,7 @@
                     {
                         @Html.ActionLink("Edit", "Edit", new { id = item.Id })
                     }
-                    @Html.ActionLink("Detail", "Treatment", "Patient", new { id = item.PatientId })
+                    @Html.ActionLink("Detail", "Treatment", "Patient", new { id = item.Id })
                 </td>
             </tr>
         }
