--- a/Webapp/Webapp/Views/Doctor/Edit.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Edit.cshtml
@@ -13,6 +13,10 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div class="form-group">
+                <label asp-for="EmployeeNumber" class="control-label"></label>
+                <input asp-for="EmployeeNumber" readonly class="form-control" />
+            </div>
+            <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" type="text" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
@@ -24,21 +28,21 @@
             </div>
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" class="form-control" />
+                <input asp-for="Phone" type="tel" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="GenderId" class="control-label"></label>
-                <input asp-for="GenderId" class="form-control" />
+                <select asp-for="GenderId" class="form-control">
                     @for (int i = 0; i < Model.Genders.Count(); i++)
                     {
                         if (i == Model.GenderId)
                         {
-                            <option selected value="i">Model.Genders[i]</option>
+                            <option selected value="@i">@Model.Genders[i]</option>
                         }
                         else
                         {
-                            <option value="i">Model.Genders[i]</option>
+                            <option value="@i">@Model.Genders[i]</option>
                         }
                     }
                 </select>
