fix gender in treatment + authorize logout

--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if (Model.Patient != null)
+@if (User.IsInRole("patient"))
 {
     <div class="container bootstrap snippet">
         <div class="row">
@@ -200,7 +200,7 @@
         </div><!--/col-9-->
     </div><!--/row-->
 }
-else if (Model.Doctor != null)
+else if (User.IsInRole("doctor"))
 {
     <div class="container bootstrap snippet">
         <div class="row">
