--- a/Webapp/Webapp/Views/Patient/Treatment.cshtml
+++ b/Webapp/Webapp/Views/Patient/Treatment.cshtml
@@ -29,7 +29,19 @@
                         <div class="form-group">
                             <div class="col-xs-6">
                                 <label asp-for="GenderId" for="Gender"><h4>Geslacht</h4></label>
-                                <input asp-for="GenderId" type="text" class="form-control" name="gender" id="gender" placeholder="Geslacht" title="Geslacht." value="@Model.GenderId">
+                                <select asp-for="GenderId" type="text" class="form-control" name="gender" id="gender" placeholder="Geslacht" title="Geslacht.">
+                                    @for (int i = 0; i < Model.Genders.Count; i++)
+                                    {
+                                        if (!(i == Model.GenderId))
+                                        {   
+                                            <option value="@i">@Model.Genders[i]</option>
+                                        }
+                                        else
+                                        {
+                                            <option selected value="@i">@Model.Genders[i]</option>
+                                        }
+                                    }
+                                </select>
                             </div>
                         </div>
                         <div class="form-group">
